--- a/app/index.html
+++ b/app/index.html
@@ -25,22 +25,32 @@
 
       <!-- Header -->
       <header class="header">
-        <div class="container">
-          <nav class="nav">
-            <div class="nav__logo"><img class="img-responsive" src="../app/img/main-logo.png" alt=""/></div>
-            <div class="nav__buttons">
-              <input class="btn black" type="button" value="sign in" />
-              <input class="btn" type="button" value="sign up" onlick="openModal()" />
-            </div>
-          </nav>
-          <div class="content">
+        <div class="header-nav">
+          <div class="container">
+            <nav class="nav">
+              <div class="nav__logo">
+                <img class="img-responsive" src="../app/img/main-logo.svg" alt=""/>
+              </div>
+              <div class="nav__menu">
+                <ul class="menu">
+                  <li class="menu-item">HOME</li>
+                  <li class="menu-item">ABOUT US</li>
+                  <li class="menu-item">OUR TEAM</li>
+                  <li class="menu-item">CONTACT</li>
+                </ul>
+                <input class="btn" type="button" value="sign up" onlick="openModal()" />
+              </div>
+            </nav>
+          </div>
+        </div>
+        <div class="content">
+          <div class="container">
             <h1 class="content-title">
-              ANYTHING YOU NEED, <br />
-              WE’VE GOT YOU COVERED.
+              FORKEE
             </h1>
-            <h2 class="content-subtitle">
-              classified advertissements website
-            </h2>
+            <span class="content-subtitle">
+              EASY TO FIND JOB
+            </span>
             <div class="content-seach-input">
               <div class="content-search">
                 <div class="search-select">
@@ -58,17 +68,17 @@
             </div>
           </div>
         </div>
-      </header>
+      </div>
+    </header>
 
       <!-- Footer -->
-      <footer class="footer">
+      <!-- <footer class="footer">
         <div class="container">
           <div class="footer-copy">
             &#169&nbsp;Forkee studio
           </div>
         </div>
-      </footer>
-
+      </footer> -->
     </main>
 
     <!-- JavaScript -->
