--- a/app/index.html
+++ b/app/index.html
@@ -72,13 +72,13 @@
     </header>
 
       <!-- Footer -->
-      <!-- <footer class="footer">
+      <footer class="footer">
         <div class="container">
           <div class="footer-copy">
             &#169&nbsp;Forkee studio
           </div>
         </div>
-      </footer> -->
+      </footer>
     </main>
 
     <!-- JavaScript -->
